--- a/app/employee/employee-list.component.html
+++ b/app/employee/employee-list.component.html
@@ -37,7 +37,7 @@
                 </thead>
 
                 <tbody>
-                    <tr *ngFor='let employee of employees'>
+                    <tr *ngFor='let employee of employees | employeeFilter : listFilter'>
                         <td>
                             <img *ngIf='showImage'
                                  [src]='employee.imageUrl'
@@ -50,7 +50,8 @@
                         <td>{{employee.id}}</td>
                         <td>{{employee.country}}</td>
                         <td>{{employee.salary}}</td>
-                        <td>{{employee.starRating}}</td>
+                        <td><my-star [rating]='employee.starRating'
+                                     (ratingsClicked)='onRatingsClicked($event)'></my-star></td>
                     </tr>
                 
                 </tbody>
